--- a/package.json
+++ b/package.json
@@ -22,11 +22,14 @@
     "@vueuse/core": "^10.4.1",
     "axios": "^1.5.0",
     "pinia": "^2.1.6",
+    "three": "^0.155.0",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vuetify": "^3.3.14"
   },
   "devDependencies": {
     "@types/node": "^20.5.7",
+    "@types/three": "^0.155.1",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
     "@typescript-eslint/parser": "^6.4.1",
     "@unocss/preset-attributify": "^0.55.3",
@@ -40,10 +43,12 @@
     "husky": "^8.0.3",
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.2",
+    "sass": "^1.66.1",
     "typescript": "^5.0.2",
     "unocss": "^0.55.3",
     "vite": "^4.4.5",
     "vite-plugin-style-import": "^2.0.0",
+    "vite-plugin-vuetify": "^1.0.2",
     "vue-tsc": "^1.8.5"
   }
 }
