--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "vuetify": "^3.3.14"
   },
   "devDependencies": {
+    "@mdi/font": "^7.2.96",
     "@types/node": "^20.5.7",
     "@types/three": "^0.155.1",
     "@typescript-eslint/eslint-plugin": "^6.4.1",
