feat:add home page content & somehint css & add vuetify config

--- a/package.json
+++ b/package.json
@@ -36,7 +36,7 @@
     "@unocss/preset-attributify": "^0.55.3",
     "@unocss/preset-icons": "^0.55.3",
     "@unocss/preset-uno": "^0.55.3",
-    "@vitejs/plugin-vue": "^4.2.3",
+    "@vitejs/plugin-vue": "^4.3.3",
     "eslint": "^8.48.0",
     "eslint-config-prettier": "^9.0.0",
     "eslint-plugin-prettier": "^5.0.0",
@@ -45,6 +45,7 @@
     "lint-staged": "^14.0.1",
     "prettier": "^3.0.2",
     "sass": "^1.66.1",
+    "sass-loader": "^13.3.2",
     "typescript": "^5.0.2",
     "unocss": "^0.55.3",
     "unplugin-auto-import": "^0.16.6",
