--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,10 +4,10 @@
       "node_modules/@types", // 默认值
       "src/types"
     ],
-    "target": "ES2020",
+    "target": "ESNext",
     "useDefineForClassFields": true,
     "module": "ESNext",
-    "lib": ["ES2020", "DOM", "DOM.Iterable"],
+    "lib": ["ESNext", "DOM", "DOM.Iterable"],
     "skipLibCheck": true,
 
     /* Bundler mode */
@@ -17,6 +17,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "preserve",
+    "allowJs": true, //编译时允许有js
+    "allowSyntheticDefaultImports": true, //允许引入没有默认导出的模块
 
     /* Linting */
     "strict": true,
@@ -24,11 +26,21 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
 
+    "outDir": "./", //将输出结构重定向到目录
     "baseUrl": "./", // 解析非相对模块的基础地址，默认是当前目录
     "paths": {
       "@/*": ["./src/*"] // 路径映射，相对于baseUrl
     }
   },
-  "include": ["src/**/*.ts", "src/**/*.d.ts", "src/**/*.tsx", "src/**/*.vue"],
+  "exclude": ["node_modules", "dist"],
+  "include": [
+    "src/**/*.ts",
+    "src/**/*.d.ts",
+    "src/**/*.tsx",
+    "src/**/*.vue",
+    "src/**/*.ts",
+    "src/**/*.js",
+    "./auto-imports.d.ts"
+  ],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
