--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
   "dependencies": {
     "@rollup/plugin-inject": "^5.0.3",
     "@vueuse/core": "^10.4.1",
+    "@vueuse/head": "^1.3.1",
     "axios": "^1.5.0",
     "core-js": "^3.32.1",
     "dayjs": "^1.11.9",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.6",
+    "shikiji": "^0.6.6",
     "three": "^0.155.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
