--- a/package.json
+++ b/package.json
@@ -25,12 +25,14 @@
     "axios": "^1.5.0",
     "core-js": "^3.32.1",
     "dayjs": "^1.11.9",
+    "floating-vue": "2.0.0-beta.24",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.6",
     "shikiji": "^0.6.6",
     "three": "^0.155.0",
     "vue": "^3.3.4",
     "vue-router": "^4.2.4",
+    "vue-router-better-scroller": "^0.0.0",
     "vuetify": "^3.3.14"
   },
   "devDependencies": {
@@ -79,6 +81,7 @@
     "vite-plugin-pages": "^0.31.0",
     "vite-plugin-style-import": "^2.0.0",
     "vite-plugin-vuetify": "^1.0.2",
+    "vite-ssg": "^0.23.1",
     "vue-tsc": "^1.8.5"
   }
 }
