--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "floating-vue": "2.0.0-beta.24",
     "nprogress": "^0.2.0",
     "pinia": "^2.1.6",
+    "pinia-plugin-persist": "^1.0.0",
     "shikiji": "^0.6.6",
     "three": "^0.155.0",
     "vue": "^3.3.4",
