--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,6 @@
     "allowSyntheticDefaultImports": true, //允许引入没有默认导出的模块
     "forceConsistentCasingInFileNames": true,
 
-
     /* Linting */
     "strict": true,
     "noUnusedLocals": true,
@@ -31,7 +30,10 @@
 
     "baseUrl": "./", // 解析非相对模块的基础地址，默认是当前目录
     "paths": {
-      "@/*": ["./src/*"] // 路径映射，相对于baseUrl
+      "@/*": ["./src/*"], // 路径映射，相对于baseUrl
+      "pinia-plugin-persist": [
+        "./node_modules/pinia-plugin-persist/dist/index.d.ts"
+      ]
     }
   },
   "exclude": ["node_modules", "dist"],
