--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@vueuse/head": "^1.3.1",
     "axios": "^1.5.0",
     "core-js": "^3.32.1",
+    "dat.gui": "^0.7.9",
     "dayjs": "^1.11.9",
     "floating-vue": "2.0.0-beta.24",
     "nprogress": "^0.2.0",
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "@mdi/font": "^7.2.96",
+    "@types/dat.gui": "^0.7.10",
     "@types/diacritics": "^1.3.1",
     "@types/fs-extra": "^11.0.1",
     "@types/markdown-it": "^13.0.1",
