feat: add 01_shader

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,8 @@
   "compilerOptions": {
     "typeRoots": [
       "./node_modules/@types", // 默认值
-      "./src/types"
+      "./src/types",
+      "vite-plugin-glsl/ext"
     ],
     "target": "ESNext",
     "useDefineForClassFields": true,
