--- a/package.json
+++ b/package.json
@@ -82,6 +82,7 @@
     "unplugin-vue-components": "^0.25.2",
     "unplugin-vue-markdown": "^0.24.3",
     "vite": "^4.4.5",
+    "vite-plugin-glsl": "^1.1.2",
     "vite-plugin-pages": "^0.31.0",
     "vite-plugin-vuetify": "^1.0.2",
     "vite-ssg": "^0.23.1",
